2013-08-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/package.el (package-desc-from-define): Ignore unknown keys.

2013-08-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode)
	(easy-mmode-define-navigation): Avoid ((lambda (..) ..) ...).

	* custom.el (custom-initialize-default, custom-initialize-set)
	(custom-initialize-reset, custom-initialize-changed): Affect the
	toplevel-default-value (bug#6275, bug#14586).
	* emacs-lisp/advice.el (ad-compile-function): Undo previous workaround
	for bug#6275.

2013-08-02  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/lisp-mode.el (lisp-imenu-generic-expression):
	Add cl-def* expressions.

	* frameset.el (frameset-filter-params): Fix order of arguments.

2013-08-02  Juanma Barranquero  <lekktu@gmail.com>

	Move code related to saving frames to frameset.el.
	* desktop.el: Require frameset.
	(desktop-restore-frames): Doc fix.
	(desktop-restore-reuses-frames): Rename from
	desktop-restoring-reuses-frames.
	(desktop-saved-frameset): Rename from desktop-saved-frame-states.
	(desktop-clear): Clear frames too.
	(desktop-filter-parameters-alist): Set from frameset-filter-alist.
	(desktop--filter-tty*, desktop-save, desktop-read):
	Use frameset functions.
	(desktop-before-saving-frames-functions, desktop--filter-*-color)
	(desktop--filter-minibuffer, desktop--filter-restore-desktop-parm)
	(desktop--filter-save-desktop-parm, desktop--filter-iconified-position)
	(desktop-restore-in-original-display-p, desktop--filter-frame-parms)
	(desktop--process-minibuffer-frames, desktop-save-frames)
	(desktop--reuse-list, desktop--compute-pos, desktop--move-onscreen)
	(desktop--find-frame, desktop--select-frame, desktop--make-frame)
	(desktop--sort-states, desktop-restoring-frames-p)
	(desktop-restore-frames): Remove.  Most code moved to frameset.el.
	(desktop-restoring-frameset-p, desktop-restore-frameset)
	(desktop--check-dont-save, desktop-save-frameset): New functions.