@@ -1,3 +1,8 @@
+2013-08-03  Juanma Barranquero  <lekktu@gmail.com>
+
+	* frameset.el (frameset-prop): New function and setter.
+	(frameset-save): Do not modify frame list passed by the caller.
+
 2013-08-03  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/package.el (package-desc-from-define): Ignore unknown keys.
